@@ -1,6 +1,7 @@
 26 July 2021: Wouter
 	- Merge #512: unbound.service.in: upgrade hardening to latest
 	  standards.
+	- Fix readzone unknown type print for memory resize.
 
 21 July 2021: Wouter
 	- Fix that ldns_zone_new_frm_fp_l counts the line number for an empty
